--- a/install
+++ b/install
@@ -1,6 +1,6 @@
 echo "Installing git..."
-sudo apt-get update > /dev/null
-sudo apt-get install -y git > /dev/null
+sudo apt update > /dev/null
+sudo apt install -y git > /dev/null
 
 echo "Cloning stable OMAKUB..."
 git clone -b stable https://github.com/maicondmenezes-at-celero/omakub.git ~/.local/share/omakub > /dev/null
